[package]
name = "kunftmarketplace-contract"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casper_types_derive = "0.1.0"
contract-utils = { path = "../utils/contract-utils" }

[profile.release]
codegen-units = 1
lto = true

[[bin]]
name = "marketplace_contract"
path = "bin/marketplace_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "pre_buy_order_cspr"
path = "bin/pre_buy_order_cspr.rs"
bench = false
doctest = false
test = false