[package]
name = "tests"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = { version = "1.4.4", default-features = false, features = ["test-support"] }
casper-engine-test-support = { version = "2.2.0", features = ["test-support"] }
# casper-execution-engine = "2.0.0"
# casper-types = "1.5.0"
# test-env = { path = "../utils/test-env" }
# contract-utils = { path = "../utils/contract-utils" }

[features]
default = ["casper-contract/std", "casper-contract/test-support"]